[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sky_background_green_hills.png" type="Texture" id=2]
[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui_elements/credits_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/ui_elements/play_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/ui_elements/question_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/ui_elements/settings_normal.png" type="Texture" id=7]
[ext_resource path="res://assets/ui_elements/back_normal.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/3XOSCMenu.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/click1.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 24
use_mipmaps = true
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 165.637, 231.868 )
scale = Vector2( 0.336451, 0.336451 )
texture = ExtResource( 2 )

[node name="texts" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="credits" type="RichTextLabel" parent="texts" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = -10.0
margin_right = 701.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Credits "
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Credits "
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors", "custom_fonts" ]

[node name="credittts2" type="RichTextLabel" parent="texts" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 326.0
margin_top = 107.0
margin_right = 660.0
margin_bottom = 477.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "-Thanks gamedeveloperstudio.com for ballons,background,icons and more.
-Thanks soundbible.com for balloon and other sounds.
-Thanks opengameart.com and members."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "-Thanks gamedeveloperstudio.com for ballons,background,icons and more.
-Thanks soundbible.com for balloon and other sounds.
-Thanks opengameart.com and members."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors", "custom_fonts" ]

[node name="RichTextLabel" type="RichTextLabel" parent="texts" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -304.0
margin_top = 11.0
margin_right = -11.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "-You have 5 points when you pop up a ballon.
-When you have 100 points you can use your bonus by clicking bonus button.
-You win one or two arrow when you pop up some ballons. "
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "-You have 5 points when you pop up a ballon.
-When you have 100 points you can use your bonus by clicking bonus button.
-You win one or two arrow when you pop up some ballons. "
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors", "custom_fonts" ]

[node name="TextureButton2" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 163.0
margin_right = 401.0
margin_bottom = 259.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 91.0
margin_right = 236.0
margin_bottom = 187.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton3" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 226.0
margin_right = 236.0
margin_bottom = 322.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton4" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 290.0
margin_right = 236.0
margin_bottom = 386.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="back" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -293.0
margin_top = 419.0
margin_right = -33.0
margin_bottom = 515.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="back2" type="TextureButton" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 339.0
margin_top = 419.0
margin_right = 599.0
margin_bottom = 515.0
rect_scale = Vector2( 0.55, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Camera2D" type="Camera2D" parent="." index="9"]

position = Vector2( 160, 241 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="click" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Label" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.0
margin_top = 70.0
margin_right = 222.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Balloon Popper v0.2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="TextureButton2" to="." method="_on_TextureButton2_button_down"]

[connection signal="toggled" from="TextureButton2" to="." method="_on_TextureButton2_toggled"]

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]

[connection signal="button_down" from="TextureButton3" to="." method="_on_TextureButton3_button_down"]

[connection signal="button_down" from="back" to="." method="_on_back_button_down"]

[connection signal="button_down" from="back2" to="." method="_on_back2_button_down"]


